Tests for sampling

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,4 +18,5 @@ message("BLAS vendor : ${BLA_VENDOR}")
 # Tests
 add_subdirectory(Tensor)
 add_subdirectory(Expr)
+add_subdirectory(Distributions)
 
