--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,5 +6,12 @@ message("BLAS linker flags : ${BLAS_LINKER_FLAGS}")
 message("BLAS libraries : ${BLAS_LIBRARIES}")
 message("BLAS vendor : ${BLA_VENDOR}")
 
-add_subdirectory(Tensor)
-add_subdirectory(Expr)
+# Expr
+add_executable(Expr Expr.cxx)
+target_link_libraries(Expr ${BLAS_LIBRARIES})
+target_include_directories(Expr PRIVATE ${PROJECT_SOURCE_DIR})
+
+# Tensor
+add_executable(Tensor Tensor.cxx)
+target_include_directories(Tensor PRIVATE ${PROJECT_SOURCE_DIR})
+
